# kafka-smart-producer

./: .gitignore  .pre-commit-config.yaml  COVERAGE_ANALYSIS_AND_RECOMMENDATIONS.md  Makefile  README.md  TEST_REPORT.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: async_producer_example.py  memory_leak_fix_example.py  partition_selection_logic.py  simplified_config_example.py
scripts/: coverage.sh
src/kafka_smart_producer/: __init__.py  async_health_manager.py  async_partition_health_monitor.py  async_producer.py  cache_factory.py  caching.py  config.py  exceptions.py  factories.py  health.py  health_config.py  health_factory.py  health_mode.py  health_utils.py  lag_collector.py  partition_health_monitor.py  producer.py  producer_config.py  producer_utils.py  protocols.py  redis_health_consumer.py  sync_health_manager.py  sync_producer.py  threading.py
tests/: __init__.py  test_async_health_monitor_extended.py  test_async_partition_health_monitor.py  test_async_producer.py  test_async_smart_producer.py  test_cache_factory.py  test_caching.py  test_caching_redis_operations.py  test_config.py  test_coverage_improvements.py  test_default_local_cache.py  test_exceptions.py  test_health.py  test_health_config.py  test_health_manager_factories.py  test_health_manager_lifecycle.py  test_health_monitor.py  test_hybrid_cache_integration.py  test_hybrid_cache_producer.py  test_kafka_admin_lag_collector.py  test_lag_collector.py  test_local_cache.py  test_message_delivery.py  test_partition_health_monitor.py  test_producer.py  test_producer_config.py  test_producer_utils.py  test_protocols.py  test_redis_cache.py  test_redis_health.py  test_scenarios_mock.py  test_scorer.py  test_selector.py  test_simple_lifecycle.py  test_simplified_producer.py  test_smart_producer.py  test_smart_producer_integration.py  test_sync_producer.py  test_threading.py
tests/integration/: README.md  base_integration_test.py  conftest.py  docker-compose.yml  test_config.py  test_infrastructure_setup.py  test_scenario_1_simple_sync_local_cache.py  test_scenario_1_sync.py  test_scenario_2_async.py  test_scenario_2_async_producer_concurrent_health.py  test_scenario_3_sync_producer_redis_cache.py  test_scenario_3_sync_redis.py  test_scenario_4_async_producer_redis_cache.py  test_scenario_4_async_redis.py  test_scenario_5_standalone_health_monitors.py  test_scenario_5_standalone_monitor.py  test_scenario_6_redis_consumer.py  (+3 more)
(+10 files in other folders)
